# Harvester

./: CMakeLists.txt  README.md  run.sh
input/: config.json  crops.txt  farm_layout.txt  soil_data.csv  soil_data.txt  water.csv
layouts/: Bangalore.txt  Bhopal.txt  Chennai.txt  Delhi.txt  Hyderabad.txt  Jaipur.txt  Kolkata.txt  Lucknow.txt  Mumbai.txt  Satellite_Farmland_1_Jharkhand.txt  Satellite_Farmland_3_Faridabad.txt
report/: crop_data1.csv  dashboard.py  gen.py  land.csv  map_generator.py  requirements.txt  soil_data.csv  water.csv
src/: main.cpp
src/Common/inc/: CommonTypes.hpp
src/Configurator/inc/: Game.hpp
src/Configurator/src/: Game.cpp
src/Feature/inc/: Plough.hpp  SoilTesting.hpp
src/Manager/inc/: Manager.hpp
src/Manager/src/: Manager.cpp
src/Platform/inc/: Grid.hpp  Platform.hpp
src/Platform/src/: Platform.cpp
src/inc/: QualityMatrix.hpp  common.hpp  config.hpp  evaluator.hpp  farmscene.hpp  grassManager.hpp  land.hpp  loader.hpp  normalizer.hpp
src/src/: main.cpp
test/: main.cpp
